# qtapp

./: .gitignore  CMakeLists.txt  DOCKER_SETUP.md  Dockerfile  README.md  StatsPanel.tsx  TopBarDemo.qml  docker-compose.override.yml  docker-compose.yml  docker_useful_commands.md  prompt-dashboard.md  prompt.md  table_of_contents.md
01-qt-setup/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
02-cpp-prereqs/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
03-widgets-basics/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
04-layouts-and-containers/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
05-signals-and-slots/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
06-events-and-handling/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
07-dialogs-and-windows/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
08-model-view-architecture/: CMakeLists.txt  Dockerfile  README.md  lesson.md  main.cpp  quiz.md
10-item-delegates/: CMakeLists.txt  Dockerfile  README.md  lesson.md  main.cpp  quiz.md
11-resources-and-translations/: CMakeLists.txt  Dockerfile  README.md  app.qss  lesson.md  main.cpp  quiz.md  resources.qrc
12-qtquick-qml-intro/: CMakeLists.txt  Dockerfile  README.md  lesson.md  main.qml  quiz.md
13-qtquick-controls/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  main.qml  quiz.md
15-multimedia/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
16-networking/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
17-threading-and-concurrency/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson-advanced.md  lesson-debug.md  lesson-insane.md  lesson-intermediate.md  lesson.md  main.cpp  quiz.md
18-sql-and-models/: CMakeLists.txt  Dockerfile  README.md  lesson.md  main.cpp  quiz.md
19-serialization-and-settings/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
20-styles-themes-and-palette/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
21-animation-and-transitions/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
22-opengl-and-3d/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
27-performance-and-profiling/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
28-accessibility-and-internationalization/: CMakeLists.txt  Dockerfile  README.md  answers.md  lesson.md  main.cpp  quiz.md
project-dashboard/: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  SCREENSHOT_INSTRUCTIONS.md  ZTODO.md  ZTODO_APP.md  ZTODO_CONFIG.md  ZTODO_DATA.md  ZTODO_DB.md  ZTODO_DOC.md  ZTODO_DOM.md  ZTODO_INFRA.md  ZTODO_MAINT.md  ZTODO_NET.md  ZTODO_PERF.md  ZTODO_SEC.md  ZTODO_TEST.md  ZTODO_UI.md  docker-compose.simulator.yml
project-dashboard/doc/: 00_INDEX.md  01_OVERVIEW.md  02_ARCHITECTURE.md  02_ARCHITECTURE.mmd  03_UI_UX_GUIDE.md  04_ALARM_SYSTEM.md  05_STATE_MACHINES.md  05_STATE_MACHINES.mmd  06_SECURITY.md  07_SETUP_GUIDE.md  08_DEFINITIONS.md  09_CLASS_DESIGNS.md  09_CLASS_DESIGNS.mmd  10_DATABASE_DESIGN.md  10_DATABASE_DESIGN.mmd  11_DATA_FLOW_AND_CACHING.md  12_THREAD_MODEL.md  12_THREAD_MODEL.mmd  13_DEPENDENCY_INJECTION.md  14_PROTOCOL_BUFFERS.md  15_CERTIFICATE_PROVISIONING.md  15_CERTIFICATE_PROVISIONING_INITIAL.mmd  15_CERTIFICATE_PROVISIONING_RENEWAL.mmd  15_CERTIFICATE_PROVISIONING_REVOCATION.mmd  15_CERTIFICATE_PROVISIONING_TRANSMISSION.mmd  15_CERTIFICATE_PROVISIONING_VALIDATION.mmd  17_DEVICE_PROVISIONING.md  19_ADT_WORKFLOW.md  20_ERROR_HANDLING_STRATEGY.md  21_LOGGING_STRATEGY.md  22_CODE_ORGANIZATION.md  23_MEMORY_RESOURCE_MANAGEMENT.md  24_CONFIGURATION_MANAGEMENT.md  25_API_VERSIONING.md  26_API_DOCUMENTATION.md  27_PROJECT_STRUCTURE.md  29_SYSTEM_COMPONENTS.md  30_DATABASE_ACCESS_STRATEGY.md  32_QUERY_REGISTRY.mmd  33_SCHEMA_MANAGEMENT.md  (+2 more)
project-dashboard/prompt/: 01-create-project-scaffold.md  02-define-public-interfaces.md  03-create-unit-test-harness.md  04-design-db-schema-migrations.md  05-implement-dbmanager-spike.md  06-define-telemetry-proto-openapi.md  07-implement-mock-networkmanager.md  08-controller-skeletons-qml-stubs.md  09-qml-ui-skeleton.md  10-alarm-ui-prototypes.md  11-device-simulator.md  12-central-server-simulator.md  13-logservice-qml-model.md  14-security-architecture-provisioning.md  15-generate-selfsigned-certs-script.md  16-mtls-integration-spike.md  17-sqlcipher-integration-plan.md  18-implement-archiver-interface.md  19-ci-workflows-build-tests.md  20-render-mermaid-script-ci.md  21-e2e-containerized-harness.md  22-update-db-design-erd.md  23-produce-api-docs.md  24-srs-vvplan.md  25-threatmodel-fmea.md  26-ui-walkthrough-i18n.md  27-di-spike-proto-size-spikes.md  44b-build-sensor-simulator-local.md  44c-implement-shared-memory-sensor-datasource.md  44d-wire-sensor-to-monitoring-service.md  44e-update-qml-ui-live-data.md  44f-e2e-testing-and-validation.md  TASK-TEST-015-performance-benchmarks.md  db-fix-01-migration-transactions.md
project-dashboard/screenshots/: README.md
project-dashboard/scripts/: README_DOXYGEN.md  VERIFY_CODE_QUALITY.md  capture_screenshot.md  capture_screenshot.sh  check_doc_links.py  collect_project_stats.md  collect_project_stats.py  create_foundation_docs.py  create_foundation_structure.sh  generate_doc_index.py  generate_mermaid_svg.md  generate_mermaid_svg.sh  pre-commit-doxygen-check.sh  render_mermaid.sh  run_tests.sh  update_doc_links.py  update_foundation_refs.py  verify_code_quality.sh
project-dashboard/sensor-simulator/: CMakeLists.txt  Dockerfile  README.md  Simulator.cpp  Simulator.h  main.cpp  qml.qrc
project-dashboard/src/: main.cpp
project-dashboard/tests/: CMakeLists.txt  tst_datagenerator.cpp
project-dashboard/z-monitor/: BUILD.md  CMakeLists.txt  Dockerfile  README.md  (+5 more)
(+850 files in other folders)
