cmake_minimum_required(VERSION 3.16)
project(lesson11-resources VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 COMPONENTS Core Widgets REQUIRED)
qt_add_executable(lesson11-resources main.cpp resources.qrc)
target_link_libraries(lesson11-resources PRIVATE Qt6::Core Qt6::Widgets)
install(TARGETS lesson11-resources RUNTIME DESTINATION /opt/lesson11)
