cmake_minimum_required(VERSION 3.16)
project(lesson12-qml VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt6 COMPONENTS Core Quick REQUIRED)
add_executable(lesson12-qml main.cpp qml.qrc)
target_link_libraries(lesson12-qml PRIVATE Qt6::Core Qt6::Quick)
install(TARGETS lesson12-qml RUNTIME DESTINATION /opt/lesson12)
