# Test targets - unit, integration, and e2e tests

# Enable testing
enable_testing()

# Note: Test targets will be added here as tests are implemented
# Example structure:
#
# # Unit tests
# add_subdirectory(unit)
#
# # Integration tests
# add_subdirectory(integration)
#
# # End-to-end tests
# add_subdirectory(e2e)
#
# # Benchmarks
# add_subdirectory(benchmarks)

# Example unit test target (to be implemented):
# add_executable(test_domain
#     unit/domain/TestPatientAggregate.cpp
#     unit/domain/TestTelemetryBatch.cpp
# )
#
# target_link_libraries(test_domain
#     PRIVATE
#         z_monitor_domain
#         Qt6::Core
#         Qt6::Test
# )
#
# add_test(NAME DomainTests COMMAND test_domain)

